--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="boards">
+            <div id="board1"></div>
+            <div id="board2"></div>
+        </div>
+        <div class="buttonbox">
+            <button id="restart">Restart</button>
+        </div>
     </div>
 </body>
 </html>
