--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div id="board2"></div>
         </div>
         <div class="buttonbox">
+            <button id="start">Start</button>
             <button id="restart">Restart</button>
         </div>
     </div>
