OMGGGGG AAAAAAAAAAAAAA FINALLY FINISHEDgit add .git add .! IT LOOKS LIKE SHIT BUT IT WORKS, YOU CAN NOW CHANGE THE DIRECTION OF THE SHIPS AS WELL AND I ADDED THE BATTLESHIP TITLE. IIIIM FIIINIISSHSHEEEEDD. I DID ITgit add .git add .!

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="container">
+        <h1>Battleship</h1>
         <div class="boards">
             <div id="board1"></div>
             <div id="board2"></div>
